# notes_site

./: pyproject.toml  test.py
notes/: db.sqlite3
notes/noteapp/: admin.py  models.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_tag_tag_of_username.py
notes/noteapp/templates/noteapp/: base.html  detail.html  index.html
notes/notes/: settings.py  urls.py
notes/users/: models.py  urls.py  views.py
notes/users/migrations/: 0001_initial.py
notes/users/templates/users/: profile.html
